<resources>
    <string name="app_name">Healthy Recipes</string>
    <string name="Hello_World">Hello World</string>
    <string name="action_settings">Setting</string>
    <string name="txtTitle">Bruschetta Recipe</string>
    <string name="description">Recipe Image</string>
    <string name="buttonRecipe">View Recipe</string>
    <string name="txtIngredients">Ingredients</string>
    <string name="txtItem1">4 plum tomatoes</string>
    <string name="textItem2">6 basil leaves</string>
    <string name="txtItem3">3 garlic cloves, chopped</string>
    <string name="txtItem4">3 TB olive oil</string>
    <string name="txtDirections">Directions</string>
    <string name="txtMix">Combine the ingredients and add salt to taste. Top French bread slices with mixture.</string>
    <string name="tittle_activity_recipe">Recipe</string>
</resources>
